# codemate-backend

./: .gitignore  Makefile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  supervisord.conf  worker.py  working_query
backend/: .dockerignore  .gitignore  Makefile  README.md  lastlog  pyproject.toml  requirements.txt  worker.py  working_query
backend/core/: settings.py
backend/core/cache/: __init__.py
backend/core/controller/: __init__.py
backend/core/db/: neo4j_session.py  session.py  utils.py
backend/core/exceptions/: base.py
backend/core/logger/: __init__.py
backend/core/repository/: base.py  enum.py
backend/core/response/: __init__.py  api_response.py
backend/core/utils/: __init__.py  auth_utils.py  email.py  file.py  http.py
backend/data/: constant.py  emails.xlsx
backend/docker/: Dockerfile  docker-compose.yml
backend/docs/: neo4j.md  postgres-pgvector.md
backend/machine/: server.py
backend/machine/api/: tags.py
backend/machine/controllers/: __init__.py  courses.py  dashboard.py  exercises.py  feedback.py  lessons.py  recommend.py  user.py
backend/machine/models/: __init__.py  activities.py  admin.py  courses.py  documents.py  exercises.py  feedback.py  learning_paths.py  lessons.py  modules.py  professor.py  quiz_exercises.py  recommend_documents.py  recommend_lessons.py  recommend_quizzes.py  student.py  student_courses.py  student_exercises.py  student_lessons.py  user.py
backend/machine/providers/: ai_tool.py  db_session.py  internal.py  services.py
backend/machine/repositories/: __init__.py  activities.py  courses.py  documents.py  exercises.py  feedback.py  learning_paths.py  lessons.py  modules.py  quiz_exercises.py  recommend_documents.py  recommend_lessons.py  recommend_quizzes.py  student_courses.py  student_exercises.py  student_lessons.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 03e0c517116c_adjust_feedback_table.py  0f9dc49fbca7_initial_migration.py  191f795929ab_new_field_learningpath_llm_response_to_.py  195b70bd9e5c_modify_password_field.py  2838e7388a1f_add_type_for_exercises_table.py  2a131cb26ca2_fix_mscb_of_admin_table.py  2d124cb9eaee_add_columns_for_user_courses_and_.py  3338a54d4cd8_create_tables.py  3b4c93bddfdc_remove_created_at_and_updated_at_.py  3bc138fa9696_merge_heads.py  3c0b0428b10f_add_relationship_for_quizzes.py  40a38ee6f816_fix_status_type.py  4524b5f89223_add_new_model_activities.py  4cd4a8109d62_delete_default_password.py  5299e55c806c_add_documents_model.py  52c257255b18_change_password_field.py  60d1d5b75d01_add_feedback_table.py  628b414eda2d_add_information_fields_for_user.py  6371eeff0db1_add_documents_model.py  66304d04b364_add_courseid_to_courses.py  6794d14e5b60_add_feedback.py  69032b86f622_create_activities_model_and_set_enum_.py  6bb743bef97e_fix_student_lessons.py  731ef32afdc4_refactor_user_into_student_professor_.py  7aae9b134150_remove_created_at_updated_at.py  7e0b17cffa0d_remove_created_at_updated_at_of_.py  84598307cabb_add_default_password.py  8cabff0e4b8e_delete_foreign_key_relationship_between_.py  8e9efd1d01ec_update_schema.py  9287fe306321_adjust_feedback_table.py  9801a14226e2_add_password_fields.py  9e6ada106013_move_lesson_type_column_from_lessons_.py  cb4d73491e75_modify_tables.py  (+14 more)
backend/templates/: email-template.html  forgot-template.html  index.html
backend/utils/: excel_utils.py  functions.py
data-ingestion/: alembic.ini  db_session.py  main.py  pyproject.toml  server.py  settings.py  utils.py
data-ingestion/alembic/: env.py
data-ingestion/db_models/: __init__.py  collection.py  document.py  s3_file.py
data-ingestion/endpoints/: __init__.py
data-ingestion/providers/: repositories.py  services.py
data-ingestion/repositories/: __init__.py  base.py  collection.py
data-ingestion/schemas/: __init__.py
data-ingestion/services/: document_collection.py  document_ingestor.py  fs_manager.py  index_builder.py  multimodal_query_engine.py  parser.py
(+305 files in other folders)
