[tool.poetry]
name = "fastapi-seed"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["loctvl842 <loclepnvx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
toml = "^0.10.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = "^5.0.4"
supervisor = "^4.2.5"
httpx = "^0.27.2"
tenacity = "^9.0.0"
dramatiq = "^1.17.0"
langgraph = "^0.2.45"
langchain = "^0.3.7"
neo4j = "^5.26.0"
langchain-google-genai = "^2.0.4"
google-generativeai = "^0.8.3"
numpy = "1.26.4"
scikit-learn = "^1.5.2"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
