[tool.poetry]
name = "knowledge-forest"
version = "0.1.0"
description = ""
authors = ["Nam Phuong Do <dpnam2112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.60.1"
langchain = "^0.3.15"
langgraph = "^0.2.67"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
