[tool.poetry]
name = "codtemate-ingestion-pipeline"
version = "0.1.0"
description = ""
authors = ["Nam Phuong Do <dpnam2112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.60.1"
langchain = "^0.3.15"
langgraph = "^0.2.67"
jupyter = "^1.1.1"
jupytext = "^1.16.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
llama-index = "^0.12.16"
llama-index-llms-anthropic = "^0.6.4"
llama-index-postprocessor-cohere-rerank = "^0.3.0"
llama-index-retrievers-bm25 = "^0.5.2"
stemmer = "^0.0.4"
llama-index-embeddings-openai = "^0.3.1"
llama-index-vector-stores-postgres = "^0.4.2"
s3fs = "^2025.2.0"
llama-parse = "^0.6.0"
loguru = "^0.7.3"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
